nms to filter corners

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ eframe = "0.21.3"
 egui = "0.21.0"
 egui_extras = {version = "0.21.0", features = ["image"]}
 image = "0.24.5"
+imageproc = "0.23.0"
