--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+argmin = "0.8.1"
 nalgebra = "0.32.2"
 num-traits = "0.2.15"
 opencv = "0.78.2"
